# QuiverDB

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cbindgen.toml  ffi.rs
benchdb/: dir-000  meta
docs/: api.md  cdc.md  ffi.md  format.md  snapshots.md
follower/: Cargo.toml  README.md
follower/src/: main.rs
python/quiverdb/: Cargo.toml  README.md  pyproject.toml
python/quiverdb/src/: lib.rs
src/: README.md  backup.rs  cli.rs  config.rs  consts.rs  db.rs  db_kv.rs  db_maintenance.rs  db_scan.rs  dir.rs  ffi.rs  free.rs  hash.rs  lib.rs  lock.rs  main.rs  meta.rs  metrics.rs  page_ovf.rs  page_rh.rs  pager.rs  subs.rs  util.rs  wal.rs
src/bloom/: cache.rs  mod.rs  sidecar.rs
src/bloom/sidecar/: mod.rs  open.rs  ops.rs
src/cli/: admin.rs  cdc.rs  db_cli.rs  rh.rs
src/cli/cdc/: apply.rs  last_lsn.rs  mod.rs  record.rs  replay.rs  ship.rs  tail.rs
src/crypto/: key_journal.rs  keyring.rs  kms.rs  mod.rs
src/db/: batch.rs  compaction.rs  core.rs  doctor.rs  exists.rs  kv.rs  maintenance.rs  mod.rs  multi.rs  open.rs  read_page.rs  scan.rs  vacuum.rs
src/free/: mod.rs
src/page/: checksum.rs  common.rs  kv_pack.rs  mod.rs
src/page/kv/: header.rs  mod.rs  record.rs
src/page/ovf/: chain.rs  header.rs  mod.rs
src/page_rh/: header.rs  ops.rs  table.rs
src/pager/: alloc.rs  cache.rs  commit.rs  core.rs  io.rs  mod.rs  replay.rs  value_cache.rs
src/snapshots/: handle.rs  io.rs  manager.rs  mod.rs  registry.rs  store.rs
src/snapstore/: manifest.rs  mod.rs  restore.rs  snapshot.rs
src/util/: mod.rs
src/wal/: encode.rs  mod.rs  net.rs  reader.rs  registry.rs  replay.rs  state.rs  writer.rs
tests/: aead_tag.rs  backup_hot_leader.rs  backup_restore.rs  basic_v3.rs  bloom.rs  bloom_cache_lru.rs  cdc_compress.rs  cdc_file_sink.rs  cdc_follow_truncate.rs  cdc_loop_psk.rs  cdc_partial_tail.rs  cdc_record_replay.rs  cdc_stream_id.rs  cdc_tcp.rs  cdc_torture.rs  check_repair_v0_9.rs  check_strict_v1.rs  checkpoint.rs  compaction.rs  config_builder.rs  crash_recovery_matrix.rs  crash_replay_v2.rs  doctor.rs  full_stack_v3.rs  integration_v0_4.rs  json_output.rs  kv_packing.rs  metamorphic_roundtrip.rs  metrics_and_wal_v0_9.rs  overflow_roundtrip_v0_6.rs  overflow_stress.rs  overflow_zstd.rs  ovf_guard.rs  phase2_snapstore.rs  ro_readers.rs  scan_api.rs  smoke.rs  snapshot_chain_mutations.rs  snapshot_hot_churn.rs  snapshot_raw_fallback.rs  (+17 more)
