[workspace]
members = [
    ".",                # корневой крейт QuiverDB (lib+bin)
    "python/quiverdb",  # PyO3-обёртка для Python (cdylib)
]

[package]
name = "QuiverDB"
version = "1.2.5"
edition = "2021"
description = "Embedded KV DB with in-page Robin Hood index, WAL, directory and overflow chains"
readme = "README.md"
repository = "https://github.com/artemonad/QuiverDB"
license = "MIT"
keywords = ["database", "embedded", "kv", "wal", "robin-hood"]
categories = ["database", "embedded"]
authors = ["Федорчук Артем (artemonad)"]

[lib]
name = "QuiverDB"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "quiverdb"
path = "src/main.rs"

[features]
default = []
ffi = []

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
byteorder = "1.5"
crc32fast = "1"
twox-hash = "1"
fs2 = "0.4"
# CDC compression
flate2 = "1"        # gzip encoder/decoder
zstd = "0.13"       # zstd encoder/decoder
# FFI JSON config (используются в ffi.rs и snapshots/registry.rs)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Логирование (lib + инициализация в CLI)
log = "0.4"
env_logger = "0.11"
# Base64 для CLI вывода реестра при не-UTF8
base64 = "0.21"

[dev-dependencies]
oorandom = "11"